--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,17 +1,27 @@
 {
     "version": "0.2.0",
     "configurations": [
+
+
         {
             "type": "lldb",
             "request": "launch",
             "name": "Debug",
             "program": "${workspaceFolder}/push_swap",
             "args": [
-                "10",
                 "4",
-                "1"
+                "3",
+                "2",
+                "1",
+                "5"
             ],
             "cwd": "${workspaceFolder}"
-        },
+        },{
+            "type": "lldb",
+            "request": "launch",
+            "name": "Debug algo",
+            "program": "${workspaceFolder}/algorithms/a.out",
+            "cwd": "${workspaceFolder}"
+        }
     ]
 }
