--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 ./build
-./printf/*.o
-./printf/libftprintf.a
+./src/printf/*.o
+./src/printf/libftprintf.a
 ./push_swap_visualizer
 .vscode
 push_swap
