--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "src/get_next_line"]
-	path = src/get_next_line
+[submodule "src/gnl"]
+	path = src/gnl
 	url = git@github.com:ab-rouzen/arouzen_GNL.git
