--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-./build
-./src/printf/*.o
-./src/printf/libftprintf.a
-./push_swap_visualizer
+build
+src/printf/*.o
+src/printf/libftprintf.a
+push_swap_visualizer
 .vscode
 push_swap
